// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-accordion> Component Default <bolt-accordion> w/o Shadow DOM renders 2`] = `
<bolt-accordion
  no-shadow=""
  style=""
>
  <!---->
  
       
      
  <div
    aria-multiselectable="true"
    class="c-bolt-accordion"
    id="handorgel2"
    style=""
  >
    
        
    <!---->
    <!---->
    
    
    <!---->
    <bolt-accordion-item
      no-shadow=""
      style=""
    >
      <!---->
      
       
      
      <div
        class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
        style=""
      >
        <!---->
        <!---->
        
      
            
        <div
          class="c-bolt-accordion-item__trigger"
          id="handorgel2-fold1-header"
          style=""
        >
          <!---->
          
          
          <button
            aria-controls="handorgel2-fold1-content"
            aria-disabled="false"
            aria-expanded="false"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            style=""
            type="button"
          >
            
            
      
            <div
              class="c-bolt-accordion-item__trigger-content"
              style=""
            >
              
        
              <!---->
              <!---->
              <bolt-text
                class="is-first-child is-last-child"
                slot="trigger"
                style=""
              >
                Accordion item 1
              </bolt-text>
              <!---->
              <!---->
              
      
            </div>
            
      
            <span
              class="c-bolt-accordion-item__trigger-icons"
              style=""
            >
              
        
              <div
                class="c-bolt-accordion-item__trigger-icons-inner"
                style=""
              >
                
          
                <bolt-icon
                  name="chevron-down"
                  style=""
                />
                
        
              </div>
              
      
            </span>
            
    
          
          </button>
          
        
          <!---->
        </div>
        
          
    
        <!---->
        
      
        <div
          aria-labelledby="handorgel2-fold1-header"
          class="c-bolt-accordion-item__content"
          id="handorgel2-fold1-content"
          role="region"
          style=""
        >
          
        
          <div
            class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
            style=""
          >
            
          
            <!---->
            <!---->
            
      
            <!---->
            
      
            <!---->
            <bolt-text
              class="is-first-child is-last-child"
              style=""
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
            </bolt-text>
            <!---->
            
    
            <!---->
            <!---->
            
        
          </div>
          
      
        </div>
        
    
        <!---->
        <!---->
      </div>
      
    
    
      <!---->
    </bolt-accordion-item>
    <!---->
    
    
    <!---->
    <bolt-accordion-item
      no-shadow=""
      style=""
    >
      <!---->
      
       
      
      <div
        class="c-bolt-accordion-item c-bolt-accordion-item--separator"
        style=""
      >
        <!---->
        <!---->
        
      
            
        <div
          class="c-bolt-accordion-item__trigger"
          id="handorgel2-fold2-header"
          style=""
        >
          <!---->
          
          
          <button
            aria-controls="handorgel2-fold2-content"
            aria-disabled="false"
            aria-expanded="false"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            style=""
            type="button"
          >
            
            
      
            <div
              class="c-bolt-accordion-item__trigger-content"
              style=""
            >
              
        
              <!---->
              <!---->
              <bolt-text
                class="is-first-child is-last-child"
                slot="trigger"
                style=""
              >
                Accordion item 2
              </bolt-text>
              <!---->
              <!---->
              
      
            </div>
            
      
            <span
              class="c-bolt-accordion-item__trigger-icons"
              style=""
            >
              
        
              <div
                class="c-bolt-accordion-item__trigger-icons-inner"
                style=""
              >
                
          
                <bolt-icon
                  name="chevron-down"
                  style=""
                />
                
        
              </div>
              
      
            </span>
            
    
          
          </button>
          
        
          <!---->
        </div>
        
          
    
        <!---->
        
      
        <div
          aria-labelledby="handorgel2-fold2-header"
          class="c-bolt-accordion-item__content"
          id="handorgel2-fold2-content"
          role="region"
          style=""
        >
          
        
          <div
            class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
            style=""
          >
            
          
            <!---->
            <!---->
            
      
            <!---->
            
      
            <!---->
            <bolt-text
              class="is-first-child is-last-child"
              style=""
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
            </bolt-text>
            <!---->
            
    
            <!---->
            <!---->
            
        
          </div>
          
      
        </div>
        
    
        <!---->
        <!---->
      </div>
      
    
    
      <!---->
    </bolt-accordion-item>
    <!---->
    
    
    <!---->
    <bolt-accordion-item
      no-shadow=""
      style=""
    >
      <!---->
      
       
      
      <div
        class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
        style=""
      >
        <!---->
        <!---->
        
      
            
        <div
          class="c-bolt-accordion-item__trigger"
          id="handorgel2-fold3-header"
          style=""
        >
          <!---->
          
          
          <button
            aria-controls="handorgel2-fold3-content"
            aria-disabled="false"
            aria-expanded="false"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            style=""
            type="button"
          >
            
            
      
            <div
              class="c-bolt-accordion-item__trigger-content"
              style=""
            >
              
        
              <!---->
              <!---->
              <bolt-text
                class="is-first-child is-last-child"
                slot="trigger"
                style=""
              >
                Accordion item 3
              </bolt-text>
              <!---->
              <!---->
              
      
            </div>
            
      
            <span
              class="c-bolt-accordion-item__trigger-icons"
              style=""
            >
              
        
              <div
                class="c-bolt-accordion-item__trigger-icons-inner"
                style=""
              >
                
          
                <bolt-icon
                  name="chevron-down"
                  style=""
                />
                
        
              </div>
              
      
            </span>
            
    
          
          </button>
          
        
          <!---->
        </div>
        
          
    
        <!---->
        
      
        <div
          aria-labelledby="handorgel2-fold3-header"
          class="c-bolt-accordion-item__content"
          id="handorgel2-fold3-content"
          role="region"
          style=""
        >
          
        
          <div
            class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
            style=""
          >
            
          
            <!---->
            <!---->
            
      
            <!---->
            
      
            <!---->
            <bolt-text
              class="is-first-child is-last-child"
              style=""
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
            </bolt-text>
            <!---->
            
    
            <!---->
            <!---->
            
        
          </div>
          
      
        </div>
        
    
        <!---->
        <!---->
      </div>
      
    
    
      <!---->
    </bolt-accordion-item>
    <!---->
    
  
    <!---->
    <!---->
    
      
  </div>
  
    
    
  <!---->
</bolt-accordion>
`;

exports[`<bolt-accordion> Component Default <bolt-accordion> with Shadow DOM renders 2`] = `
<bolt-accordion
  style=""
>
  
    
  <bolt-accordion-item
    style=""
  >
    
      
    <bolt-text
      class="is-first-child is-last-child"
      slot="trigger"
      style=""
    >
      Accordion item 1
    </bolt-text>
    
      
    <bolt-text
      class="is-first-child is-last-child"
      style=""
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
    </bolt-text>
    
    
  </bolt-accordion-item>
  
    
  <bolt-accordion-item
    style=""
  >
    
      
    <bolt-text
      class="is-first-child is-last-child"
      slot="trigger"
      style=""
    >
      Accordion item 2
    </bolt-text>
    
      
    <bolt-text
      class="is-first-child is-last-child"
      style=""
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
    </bolt-text>
    
    
  </bolt-accordion-item>
  
    
  <bolt-accordion-item
    style=""
  >
    
      
    <bolt-text
      class="is-first-child is-last-child"
      slot="trigger"
      style=""
    >
      Accordion item 3
    </bolt-text>
    
      
    <bolt-text
      class="is-first-child is-last-child"
      style=""
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
    </bolt-text>
    
    
  </bolt-accordion-item>
  
  
</bolt-accordion>
`;

exports[`<bolt-accordion> Component Inactive item 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Active accordion item
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item inactive>
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <div class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-item__trigger-label--inactive c-bolt-accordion-spacing--medium">
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Inactive accordion item
                </div>
              </ssr-keep>
            </div>
          </div>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Active accordion item
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component basic usage 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component expand single items: false 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component expand single items: true 1`] = `
<bolt-accordion single>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: large 1`] = `
<bolt-accordion spacing="large">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: medium 1`] = `
<bolt-accordion spacing="medium">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: none 1`] = `
<bolt-accordion spacing="none">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: small 1`] = `
<bolt-accordion spacing="small">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: xsmall 1`] = `
<bolt-accordion spacing="xsmall">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;
